--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,15 @@
   overflow:hidden;
   position: absolute;
   color: white;
-  top:-100%;
-  left:0;
+padding: 250px;
+line-height: 32px;
+  font-weight: lighter;
+  font-family:'Arial Narrow', Arial, sans-serif;
+  top:0;
+  left:-100%;
   width:100%;
-  height:90%;
-  background-color:rgba(0,0,0,0.8);
+  height:100%;
+  background-color:rgb(8, 95, 8);
   padding:20px;
   text-align: left;
   box-sizing: border-box;
@@ -45,7 +49,6 @@
   overflow: hidden;
 }
 .img:hover .text{
-  top:0;
- 
+left: 0;
 }
 
